--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "axios": "^1.7.7",
+    "mapbox-gl": "^3.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
