--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "@stripe/react-stripe-js": "^3.0.0",
+    "@stripe/stripe-js": "^5.2.0",
     "axios": "^1.7.7",
     "mapbox-gl": "^3.8.0",
     "react": "^18.3.1",
